[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "call2me"
version = "1.3.0"
description = "Call2Me Python SDK — Build AI voice agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["httpx>=0.24"]

[project.urls]
Homepage = "https://call2me.app"
Documentation = "https://call2me.app/docs"
Repository = "https://github.com/call2me-app/python-sdk"
